fix no-image-desc icon alignment

--- a/web/assets/status.css
+++ b/web/assets/status.css
@@ -91,13 +91,17 @@ main {
 			position: absolute;
 			bottom: 0.1rem;
 			right: 0.4rem;
-			content: "(!)";
 			color: white;
 			background: #5897df;
 			padding: 0.2rem 0.4rem;
 			border-radius: 100%;
 			z-index: 3;
 		}
+
+.toot .media .no-image-desc i.fa {
+				display: block;
+				line-height: 1.3rem;
+			}
 
 .toot .media .no-image-desc span {
 				margin-left: 0.3rem;
